--- a/src/app/edit-album/edit-album.component.html
+++ b/src/app/edit-album/edit-album.component.html
@@ -11,4 +11,5 @@
 <label>New Album Description:</label>
 <input [(ngModel)]="selectedAlbum.description">
 
-<button (click)="beginUpdatingAlbum(selectedAlbum)">Update</button>
+<button (click)="beginUpdatingAlbum(selectedAlbum)" class="btn">Update</button>
+<button (click)='beginDeletingAlbum(selectedAlbum)' class="btn">Delete</button>
